<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailedView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkmode_gray">

    <LinearLayout
        android:id="@+id/linearLayout"
...
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/logout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/common_button"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
...
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_logout_24" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/switcher"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/common_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/logout"
...
                android:id="@+id/connected_status"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/disconnected"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/settings"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/settings"
                android:layout_width="50dp"
                android:layout_height="50dp"
...
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/gray"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/decreaseSegmentButton"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <View
...
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/detailed_view_segment_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/detailed_view_segment_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
...
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray" />

            <ImageButton
                android:id="@+id/increaseSegmentButton"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:rotation="180"
                app:srcCompat="?attr/actionModeCloseDrawable" />
        </LinearLayout>
...
