<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/simple_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkmode_gray"
    tools:context=".views.SimpleView">


...
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="182dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="112dp"
        android:backgroundTint="@color/white"
        android:text="@string/password_login_text"
...
