...
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout1"
        app:layout_constraintTop_toBottomOf="@+id/HeaderBar">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/segment_image"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
...
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout10"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button11"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/segment_image"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
...
